Add CLI call example. Issue #1

--- a/index.html
+++ b/index.html
@@ -54,6 +54,11 @@
                                 <code class="erlc-preview__item-code">php_value error_reporting <span
                                         class="erlc-preview__item-value"></span></code>
                             </div>
+                            <div class="erlc-preview__item erlc-preview__item--cli">
+                                <div class="erlc-preview__item-header">Set error reporting in PHP CLI (e.g. in cron job)</div>
+                                <code class="erlc-preview__item-code">/usr/bin/php -d error_reporting=<span
+                                        class="erlc-preview__item-value"></span> wp-cron.php</code>
+                            </div>
                         </div>
                     </div>
                 </div>
